@@ -1,3 +1,8 @@
+2004-01-17  Andrew Lunn  <andrew.lunn@ascom.ch>
+
+	* src/sys/kern/sockio.c (bsd_connect): Set the sa_len field in
+	the sockaddr structure. Real FreeBSD does this.
+
 2003-12-21  Nick Garnett  <nickg@calivar.com>
 
 	* include/sys/param.h: Restored MD5 function mappings. These were
